--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-fastapi
-uvicorn
+fastapi==0.78.0
+uvicorn==0.17.6
 scikit-learn==1.2.2
-pandas
-numpy
-geopy
+pandas==1.5.3
+numpy==1.24.2
+geopy==2.3.0
