--- a/vercel.json
+++ b/vercel.json
@@ -14,13 +14,7 @@
     ],
     "functions": {
       "api/**/*.py": {
-        "excludeFiles": [
-          "tests/**",
-          "docs/**",
-          "*.log",
-          "node_modules/**",
-          "*.md"
-        ]
+        "excludeFiles": "{.next,*.cache,node_modules,public,app}/**"
       }
     }
   }
