--- a/vercel.json
+++ b/vercel.json
@@ -1,21 +1,26 @@
 {
-    "version": 2,
-    "builds": [
-      {
-        "src": "app.py",
-        "use": "@vercel/python"
-      }
-    ],
-    "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "app.py"
-      }
-    ],
-    "functions": {
-      "api/**/*.py": {
-        "excludeFiles": "{.next,*.cache,node_modules,public,app}/**"
-      }
+  "version": 2,
+  "builds": [
+    {
+      "src": "app.py",
+      "use": "@vercel/python"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "app.py"
+    }
+  ],
+  "functions": {
+    "*.py": {
+      "excludeFiles": [
+        "tests/**",
+        "docs/**",
+        "*.log",
+        "node_modules/**",
+        "*.md"
+      ]
     }
   }
-  
+}
