--- a/vercel.json
+++ b/vercel.json
@@ -3,18 +3,16 @@
   "builds": [
     {
       "src": "app.py",
-      "use": "@vercel/python"
+      "use": "@vercel/python",
+      "config": {
+        "excludeFiles": "tests/**\ndocs/**\n*.log\nnode_modules/**\n*.md"
+      }
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "app.py"
+      "dest": "/app.py"
     }
-  ],
-  "functions": {
-    "api/*.py": {
-      "excludeFiles": "tests/**"
-    }
-  }
+  ]
 }
